--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 8080
 JWT_SECRET=your_super_secret_key
-JWT_EXPIRES_IN=1h
+JWT_EXPIRES_IN=5m
+JWT_REFRESH_SECRET=your_refresh_secret_key
+JWT_REFRESH_EXPIRES_IN=7d
